--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <title>Weather Genie</title>
   </head>
   <body>
-    <a href="">Weather App</a>
+    <a href="">Weather Genie</a>
     <div class="container">
       <header>
         <h5> Search weather in</h5>
