--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="">Weather Genie</a>
     <div class="container">
       <header>
-        <h5> Search weather in</h5>
+        <h5> Search Weather in</h5>
         <div class="search-grp">
           <form action="#">
             <input type="text" placeholder="Enter location..." id="search-input" />
