--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h3 id="humidity-degree"></h3>
             </div>
             <div id="feelslike" class="grp">
-                <span><i class="fa-solid fa-droplet"></i> Feels like</span>
+                <span><i class="fa-solid fa-droplet"></i> Feels like 🤔 </span>
                 <h3 id="feelslike-degree"></h3>
             </div>
           </div>
