--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="">Weather Genie</a>
     <div class="container">
       <header>
-        <h5> Search Weather in</h5>
+        <h5> Search weather in</h5>
         <div class="search-grp">
           <form action="#">
             <input type="text" placeholder="Enter location..." id="search-input" />
@@ -53,13 +53,13 @@
                 <h3 id="humidity-degree"></h3>
             </div>
             <div id="feelslike" class="grp">
-                <span><i class="fa-solid fa-droplet"></i> Feels like 🤔 </span>
+                <span><i class="fa-solid fa-droplet"></i> Feels like </span>
                 <h3 id="feelslike-degree"></h3>
             </div>
           </div>
       </section>
       <button onclick="getLocationData()" id="loc-btn">
-        <i class="fa-solid fa-location-dot"></i> View Current location <i class="fa-solid fa-location-dot"></i>
+        <i class="fa-solid fa-location-dot"></i> View current location <i class="fa-solid fa-location-dot"></i>
       </button>
     </div>
   </body>
