--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="container">
       <section class="weather-search">
-        <h2>Search weather in</h2>
+        <h2>Search weather in...</h2>
         <div class="search-grp">
           <form action="#" aria-label="Search for weather location">
             <label for="search-input" class="visually-hidden">Enter location</label>
