--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     <footer>
       <p>&copy; 2025 Weather Genie. All rights reserved.</p>
+      <p>Agyare Kelvin Yeboah, Full Stack Software Developer </p>
     </footer>
 
     <script src="script.js"></script>
