--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
 
     <footer>
       <p>&copy; 2025 Weather Genie. All rights reserved.</p>
-      <p>Agyare Kelvin Yeboah, Full Stack Software Developer </p>
+      <p>
+        <img src = "main.jpg" alt = "Agyare Kelvin Yeboah " class = "developer-img"/>
+        Agyare Kelvin Yeboah, Full Stack Software Developer 
+      </p>
     </footer>
 
     <script src="script.js"></script>
