--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-
-  <!-- Fa
-  <body>
-    <header>
-      <h1><a href="/" title="Go to homepage">Weather Genie</a></h1>
-    </header>
-
-    <div class="container">
-      <section class="weather-search">
-        <h2>Search weather in...</h2>
-        <div class="search-grp">
-          <form action="#" aria-label="Search for weather location">
+"#" aria-label="Search for weather location">
             <label for="search-input" class="visually-hidden">Enter location</label>
             <input type="text" id="search-input" placeholder="Enter location..." aria-describedby="search-help" />
             <button type="submit" aria-label="Search weather">
