--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 "#" aria-label="Search for weather location">
-            <label for="search-input" class="visually-hidden">Enter location</label>
-           
-      <section class="weather-info">
-        <h3 id="city"></h3>
-        <p id="date"></p>
-
-        <div class="temperature">
-          <span id="temperature-degree"></span> °C
+           gree"></span> °C
         </div>
 
         <div class="description">
