--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-"#" aria-label="Search for weather location">
-           gree"></span> °C
-        </div>
-
-        <div class="description">
-          <img src="" alt="" id="description-img" />
-          <p id="description-text"></p>
-        </div>
-
-        <div class="details">
-          <div id="humidity" class="grp">
-            <span><i class="fa-solid fa-temperature-empty"></i>Humidity</span>
+"#" aria-a-temperature-empty"></i>Humidity</span>
             <h3 id="humidity-degree"></h3>
           </div>
 
