--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-
-
-      <button onclick="getLocationData()" id="loc-btn" aria-label="View weather for your current location">
-        <i class="fa-solid fa-location-dot"></i> View current location <i class="fa-solid fa-location-dot"></i>
-      </button>
-    </div>
-
-    <footer>
-      <p>&copy; 2025 Weather Genie. All rights reserved.</p>    
-        <p>
-        <img src="main.jpg" alt="Agyare Kelvin Yeboah" class="developer-img" />
+c="main.jpg" alt="Agyare Kelvin Yeboah" class="developer-img" />
         Agyare Kelvin Yeboah, Full Stack Software Developer
       </p>
   </footer>
