--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p>© 2025 Weather Genie. All rights reserved.</p>
     <p>
       <img src="main.jpg" alt="Agyare Kelvin Yeboah" class="developer-img" />
-      Agyare Kelvin Yeboah, Frontend S Engineer
+      Agyare Kelvin Yeboah, Frontend  Engineer
     </p>
   </footer>
 
