--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-k rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <
-<body>
-  <header>
-    <h1><a href="/" title="Go to homepage">Weather Genie</a></h1>
-    <div class="dark-mode-toggle">
+class="dark-mode-toggle">
       <i class="fas fa-moon" id="toggle-icon"></i>
     </div>
   </header>
