--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 class="dark-mode-toggle">
       <i class="fas fa-moon" id="toggle-icon"></i>
     </div>
-  </header>
-
-  <div class="container">
+  <ass="container">
     <section class="weather-search">
       <h2>Search Weather In...</h2>
       <div class="search-grp">
