--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
    <h2>Search Weather In...</h2>
       <div class="search-grp">
         <form action="#" aria-label="Search for weather location">
-          <label for="search-input" class="visually-hidden">Enter location</label>
-          <input type="text" id="search-input" placeholder="Enter location..." aria-describedby="search-help" />
-          <button type="submit" aria-label="Search weather">
-            <i class="fa-solid fa-magnifying-glass"></i>
+         class="fa-solid fa-magnifying-glass"></i>
           </button>
           <button type="button" id="voice-search" aria-label="Voice search">
             <i class="fa-solid fa-microphone"></i>
