--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-   <button type="button" id="voice-search" aria-label="Voice search">
-      
-    </section>
-
-    <section class="weather-info">
-      <div class="weather-header">
-        <h3 id="city"></h3>
-        <p id="date"></p>
+p id="date"></p>
       </div>
       <div class="weather-main">
         <div class="temperature">
