--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <div class="temperature">
           <span id="temperature-degree"></span>
-          <button id="unit-toggle" aria-label="Toggle temperature unit">°C</button>
-        </div>
-        <div class="description">
-          <img src="" alt="" id="description-img" class="weather-icon" />
-          <p id="description-text"></p>
+          <bescription-text"></p>
         </div>
       </div>
       <div class="weather-message" id="weather-message"></div> <!-- New Message Area -->
