--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <div class="temperature">
-          <span id="temperature-degree"></span>
-          <bescription-text"></p>
-        </div>
-      </div>
-      <div class="weather-message" id="weather-message"></div> <!-- New Message Area -->
-      <div class="details">
-        <div class="grp">
+iv class="grp">
           <i class="fa-solid fa-droplet"></i>
           <span>Humidity</span>
           <h3 id="humidity-degree"></h3>
