--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <div class="temperature">
 iv class="grp">
-          <i class="fa-solid fa-droplet"></i>
-          <span>Humidity</span>
-          <h3 id="humidity-degree"></h3>
-        </div>
-        <div class="grp">
-          <i class="fa-solid fa-temperature-half"></i>
+     class="fa-solid fa-temperature-half"></i>
           <span>Feels Like</span>
           <h3 id="feelslike-degree"></h3>
         </div>
