--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <div class="temperature">
 iv class="grp">
-     class="fa-solid fa-temperature-half"></i>
-          <span>Feels Like</span>
-          <h3 id="feelslike-degree"></h3>
-        </div>
-        <div class="grp">
-          <i class="fa-solid fa-wind"></i>
+     classs="fa-solid fa-wind"></i>
           <span>Wind Speed</span>
           <h3 id="wind-speed"></h3>
         </div>
