--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<div class="temperature">
-iv cl
-
-    <button onclick="getLocationData()" id="loc-btn" aria-label="View weather for your current location">
-      <i class="fa-solid fa-location-dot"></i> Current Location <i class="fa-solid fa-location-dot"></i>
-    </button>
-  </div>
-
-  <footer>
+ter>
     <p>© 2025 Weather Genie. All rights reserved.</p>
     <p>
       <img src="main.jpg" alt="Agyare Kelvin Yeboah" class="developer-img" />
