--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Weather Genie: Check real-time weather and 5-day forecasts for any city.">
+  <meta name="theme-color" content="#ffd700">
+  <title>Weather Genie</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.jpg" type="image/jpeg">
+</head>
+<body>
+  <header>
+    <h1><a href="/" aria-label="Weather Genie homepage">Weather Genie</a></h1>
+    <button class="dark-mode-toggle" aria-label="Toggle dark mode">
+      <i class="fas fa-moon" id="toggle-icon"></i>
+    </button>
+  </header>
+
+  <main class="container">
+    <section class="weather-search" aria-labelledby="search-heading">
+      <h2 id="search-heading">Search Weather</h2>
+      <form class="search-grp" aria-label="Search for weather by location">
+        <label for="search-input" class="visually-hidden">Enter city name</label>
+        <input type="text" id="search-input" placeholder="Enter city..." aria-describedby="search-help" required>
+        <button type="submit" aria-label="Search weather"><i class="fas fa-magnifying-glass"></i></button>
+        <button type="button" id="voice-search" aria-label="Start voice search"><i class="fas fa-microphone"></i></button>
+      </form>
+      <p id="search-help" class="search-help">Enter a city name or use voice search to check the weather.</p>
+    </section>
+
+    <section class="weather-info hidden" aria-labelledby="weather-heading">
+      <div class="weather-header">
+        <h3 id="weather-heading" class="city"></h3>
+        <p class="date"></p>
+      </div>
+      <div class="weather-main">
+        <div class="temperature">
+          <span class="temperature-degree" aria-label="Current temperature"></span>
+          <button class="unit-toggle" aria-label="Toggle between Celsius and Fahrenheit">°C</button>
+        </div>
+        <div class="description">
+          <img src="" alt="" class="weather-icon" aria-hidden="true">
+          <p class="description-text"></p>
+        </div>
+      </div>
+      <div class="weather-message" aria-live="polite"></div>
+      <div class="details">
+        <div class="grp">
+          <i class="fas fa-droplet" aria-hidden="true"></i>
+          <span>Humidity</span>
+          <p class="humidity-degree"></p>
+        </div>
+        <div class="grp">
+          <i class="fas fa-temperature-half" aria-hidden="true"></i>
+          <span>Feels Like</span>
+          <p class="feelslike-degree"></p>
+        </div>
+        <div class="grp">
+          <i class="fas fa-wind" aria-hidden="true"></i>
+          <span>Wind Speed</span>
+          <p class="wind-speed"></p>
+        </div>
+      </div>
+      <div class="forecast" aria-labelledby="forecast-heading">
+        <h4 id="forecast-heading">5-Day Forecast</h4>
+        <div class="forecast-container"></div>
+      </div>
+    </section>
+
+    <button class="loc-btn" aria-label="Get weather for current location">
+      <i class="fas fa-location-dot" aria-hidden="true"></i> Current Location
+    </button>
+  </main>
+  <footer>
+    <p>© 2025 Weather Genie. All rights reserved.</p>
+    <p>
+      <img src="main.jpg" alt="Agyare Kelvin Yeboah, Full Stack Software Developer" class="developer-img" loading="lazy">
+      Agyare Kelvin Yeboah, Full Stack Software Developer
+    </p>
+  </footer>
+
+  <script src="script.js" defer></script>
+</body>
+</html>
